fixed align ment

--- a/front-end/src/index.css
+++ b/front-end/src/index.css
@@ -50,6 +50,16 @@ code {
   font-size: small;
 }
 
+.login-box{
+  flex:1;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  font-size: small;
+  margin: 10px;
+}
+
 .article-box {
   border:1px solid black;
   flex:2;
